--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.0",
     "babel-polyfill": "^6.26.0",
     "express": "^4.16.3",
+    "flexsearch": "^0.7.21",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
   },
@@ -26,6 +27,7 @@
     "@babel/preset-react": "^7.10.1",
     "@babel/preset-typescript": "^7.10.1",
     "@types/express": "^4.17.9",
+    "@types/flexsearch": "^0.7.1",
     "@types/react": "^16.9.38",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
