--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode production",
     "start": "npm run build && ts-node src/server/index.ts",
     "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
-    "server": "ts-node-dev src/server/index.ts",
+    "server": "ts-node-dev --max-old-space-size=5120 src/server/index.ts",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Assemble",
